--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@shopify/flash-list": "^1.7.3",
+    "@tamagui/linear-gradient": "^1.125.2",
     "expo": "^52.0.35",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
