--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@shopify/flash-list": "^1.7.3",
     "@tamagui/linear-gradient": "^1.125.2",
+    "@tanstack/react-query": "^5.66.3",
     "expo": "^52.0.35",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
